# KKT_MPNN

./: .clineignore  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  environment.yml  pyproject.toml  requirements.yml  ruff.toml  tasks.md
PRPs/context/: JEPA_integration_analysis.md
PRPs/feature-requests/: sprint-1-feature-requests.md
PRPs/implementation-plans/: sprint-1-implementation-plan.md
claude/: CLAUDE.md  CODING_CONVENTIONS.md  SPRINT1_CODE_REVIEW.md
claude/.claude/: settings.json
deploy/: finetune_split.py  finetune_split_sweep.py  split.py
deploy/finetune_splits/: finetune_split_CA_200_COMPOSER_h0.yml  finetune_split_CA_200_COMPOSER_h1.yml  finetune_split_CA_200_COMPOSER_h2.yml  finetune_split_CA_200_PRETRAINED_h0.yml  finetune_split_CA_200_PRETRAINED_h1.yml  finetune_split_CA_200_PRETRAINED_h2.yml  finetune_split_CA_200_RAW_h0.yml  finetune_split_CA_200_RAW_h1.yml  finetune_split_CA_200_RAW_h2.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
opencode/: AGENTS.md  opencode.json
papers/: proposal.latex
src/: 1.generate_instances.py  2.train_model.py  SWEEP_GUIDE.md  SWEEP_QUICKSTART.md  config.yml  eval_halo_embedding_coupling.csv  finetune.py  generate_data.py  generate_instances.py  hyperparameter_sweep.py  main.py  plot_prediction.py  pretrain.py  sweep_results.xlsx  sweep_results1.xlsx  test.ipynb  test.py  test_architecture.py  test_model.py  test_normalization_direct.py  train.py  trainer.py  trainer_old.py
src/MPNN/: GCN.py  gorubi.py  (+3 more)
(+241 files in other folders)
